[package]
name = "vault-core-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["ws", "multipart", "http2"] }
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.20"
reqwest = { version = "0.11.21", default-features = false, features = [
  "rustls-tls",
  "stream",
] }
serde = "1.0.188"
serde_json = "1.0.107"
similar-asserts = "1.5.0"
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
vault-core = { path = "../vault-core" }
vault-fake-remote = { path = "../vault-fake-remote" }
vault-native = { path = "../vault-native" }
vault-store = { path = "../vault-store" }
