[package]
name = "vault-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# eme-mode 0.2.1 does not compile with aes 0.8.1
aes = { version = "0.7.5", features = ["ctr"] }
async_zip_futures = { version = "0.0.12", features = ["chrono"] }
async-trait = "0.1.73"
bytes = "1.5.0"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
data-encoding = "2.4.0"
# eme-mode 0.3 is not correct for inputs longer than 16 bytes
eme-mode = "0.2.1"
futures = { version = "0.3.28", features = ["executor"] }
http = "0.2.9"
http-body = "0.4.5"
log = "0.4.20"
md5 = "0.7.0"
phf = { version = "0.11.2", features = ["macros"] }
pin-project-lite = "0.2.13"
rand_core = "0.6.4"
rust-ini = "0.19.0"
# scrypt > 0.6 limits key len to 64, but we need 80, let's keep 0.2, it works
scrypt = { version = "0.2", default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_urlencoded = "0.7.1"
slug = "0.1.4"
thiserror = "1.0.49"
url = "2.4.1"
urlencoding = "2.1.3"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
vault-store = { path = "../vault-store" }
xsalsa20poly1305 = "0.9.1"

[dev-dependencies]
futures-test = "0.3.28"
similar-asserts = "1.5.0"
regex = "1.9.6"
