[package]
name = "vault-desktop-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.3", features = ["ws"] }
bytes = "1.5.0"
data-encoding = "2.5.0"
directories-next = "2.0.0"
dirs-sys-next = "0.1.2"
drop-stream = "0.3.0"
futures = "0.3.30"
http-body-util = "0.1.0"
keyring = "2.3.3"
log = "0.4.20"
mime = "0.3.17"
open = "5.0.1"
rand_core = "0.6.4"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_urlencoded = "0.7.1"
thiserror = "1.0.56"
tokio = "1.35.1"
tokio-util = { version = "0.7.10", features = ["compat"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.5.0", features = ["cors"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
vault-core = { path = "../vault-core" }
vault-crypto = { path = "../vault-crypto" }
vault-native = { path = "../vault-native" }
vault-web-api = { path = "../vault-web-api" }

[dev-dependencies]
similar-asserts = "1.5.0"
urlencoding = "2.1.3"

[lib]
name = "vault_desktop_server"
path = "src/lib.rs"

[[bin]]
name = "desktop_server"
path = "src/main.rs"
