[package]
name = "vault-fake-remote"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
axum = { version = "0.6.20", features = ["ws", "multipart", "http2"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.28"
hex = "0.4.3"
http = "0.2.9"
log = "0.4.17"
mime = "0.3.17"
reqwest = { version = "0.11.18", default-features = false, features = [
  "rustls-tls",
  "stream",
] }
rustls = { version = "0.21.1", features = ["dangerous_configuration"] }
serde = "1.0.174"
serde_json = "1.0.96"
sha1 = "0.10.5"
url = "2.3.1"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tower-http = { version = "0.4.3", features = ["cors", "fs"] }
tokio-tungstenite = { version = "0.19.0", features = [
  "rustls-tls-webpki-roots",
] }
tokio-util = { version = "0.7.8", features = ["compat"] }
tower = "0.4.13"
urlencoding = "2.1.2"
uuid = { version = "1.3.3", features = ["v4", "fast-rng"] }
vault-core = { path = "../vault-core" }

[lib]
name = "vault_fake_remote"
path = "src/lib.rs"

[[bin]]
name = "fake_remote"
path = "src/main.rs"
