[package]
name = "vault-fake-remote"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["ws", "multipart", "http2"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.28"
hex = "0.4.3"
http = "0.2.9"
log = "0.4.20"
mime = "0.3.17"
reqwest = { version = "0.11.21", default-features = false, features = [
  "rustls-tls",
  "stream",
] }
rustls = { version = "0.21.7", features = ["dangerous_configuration"] }
serde = "1.0.188"
serde_json = "1.0.107"
sha1 = "0.10.6"
url = "2.4.1"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors", "fs"] }
tokio-tungstenite = { version = "0.20.1", features = [
  "rustls-tls-webpki-roots",
] }
tokio-util = { version = "0.7.9", features = ["compat"] }
tower = "0.4.13"
urlencoding = "2.1.3"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
vault-core = { path = "../vault-core" }

[lib]
name = "vault_fake_remote"
path = "src/lib.rs"

[[bin]]
name = "fake_remote"
path = "src/main.rs"
