[package]
name = "vault-fake-remote"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
axum = { version = "0.6.20", features = ["ws", "multipart", "http2"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.0"
futures = "0.3.30"
hex = "0.4.3"
http = "0.2.11"
http-range-header = "0.4.0"
log = "0.4.20"
mime = "0.3.17"
reqwest = { version = "0.11.23", default-features = false, features = [
  "rustls-tls",
  "stream",
] }
rustls = { version = "0.21.10", features = ["dangerous_configuration"] }
serde = "1.0.195"
serde_json = "1.0.111"
sha1 = "0.10.6"
url = "2.5.0"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors", "fs"] }
tokio-tungstenite = { version = "0.20.1", features = [
  "rustls-tls-webpki-roots",
] }
tokio-util = { version = "0.7.10", features = ["compat"] }
tower = "0.4.13"
urlencoding = "2.1.3"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
vault-core = { path = "../vault-core" }

[lib]
name = "vault_fake_remote"
path = "src/lib.rs"

[[bin]]
name = "fake_remote"
path = "src/main.rs"
