[package]
name = "vault-file-icon"
version = "0.1.0"
edition = "2021"

[dependencies]
resvg = { version = "0.37.0", default-features = false, optional = true }
tiny-skia = { version = "0.11.3", default-features = false, features = [
  "png-format",
  "simd",
  "std",
], optional = true }
usvg = { version = "0.37.0", default-features = false, optional = true }

[features]
default = ["render"]
render = ["dep:resvg", "dep:tiny-skia", "dep:usvg"]
