[package]
name = "vault-mobile"
version = "0.1.0"
edition = "2021"

[lib]
name = "vault_mobile"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
async-trait = "0.1.77"
env_logger = "0.11.0"
futures = "0.3.30"
lazy_static = "1.4.0"
log = "0.4.20"
reqwest = { version = "0.11.23", default-features = false, features = [
  "rustls-tls",
] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tokio-tungstenite = { version = "0.20.1", features = [
  "rustls-tls-webpki-roots",
] }
tokio-util = { version = "0.7.10", features = ["compat"] }
uniffi = "0.24.3"
url = "2.5.0"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
vault-core = { path = "../vault-core" }
vault-crypto = { path = "../vault-crypto" }
vault-fake-remote = { path = "../vault-fake-remote" }
vault-file-icon = { path = "../vault-file-icon" }
vault-native = { path = "../vault-native" }
vault-version = { path = "../vault-version" }

[dev-dependencies]
http = "0.2.11"
similar-asserts = "1.5.0"
vault-core-tests = { path = "../vault-core-tests" }

[build-dependencies]
uniffi = { version = "0.24.3", features = ["build"] }
