[package]
name = "vault-native"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
futures = "0.3.28"
http = "0.2.9"
log = "0.4.17"
reqwest = { version = "0.11.18", default-features = false, features = [
  "rustls-tls",
  "stream",
] }
url = "2.3.1"
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = { version = "0.19.0", features = [
  "rustls-tls-webpki-roots",
] }
vault-core = { path = "../vault-core" }
rustls = { version = "0.21.1", features = ["dangerous_configuration"] }

[dev-dependencies]
env_logger = "0.10.0"
