[package]
name = "vault-native"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.73"
futures = "0.3.28"
http = "0.2.9"
log = "0.4.20"
reqwest = { version = "0.11.21", default-features = false, features = [
  "rustls-tls",
  "stream",
] }
url = "2.4.1"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = [
  "rustls-tls-webpki-roots",
] }
vault-core = { path = "../vault-core" }
vault-crypto = { path = "../vault-crypto" }
rustls = { version = "0.21.7", features = ["dangerous_configuration"] }

[dev-dependencies]
env_logger = "0.10.0"
