[package]
name = "vault-native"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
futures = "0.3.30"
http = "0.2.11"
log = "0.4.20"
reqwest = { version = "0.11.23", default-features = false, features = [
  "rustls-tls",
  "stream",
] }
url = "2.5.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = [
  "rustls-tls-webpki-roots",
] }
vault-core = { path = "../vault-core" }
vault-crypto = { path = "../vault-crypto" }
rustls = { version = "0.21.10", features = ["dangerous_configuration"] }

[dev-dependencies]
env_logger = "0.11.0"
similar-asserts = "1.5.0"
